--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -26,6 +26,14 @@ library
   hs-source-dirs:      lib
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , conduit >= 1.0 && < 2.0 
+                     , mtl >= 2.0 && < 3.0 
+                     , resourcet >= 1.0 && < 2.0 
+                     , conduit-combinators >= 1.0 && < 2.0 
+                     , transformers >= 0.4 && < 1.0 
+                     , directory >= 1.2 && < 2.0 
+                     , filepath >= 1.3 && < 2.0 
+                     , text >= 1.0 && < 2.0
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
