--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -34,6 +34,8 @@ library
                      , directory >= 1.2 && < 2.0 
                      , filepath >= 1.3 && < 2.0 
                      , text >= 1.0 && < 2.0
+                     , monad-control >= 1.0 && < 2.0
+                     , transformers-base >= 0.3 && < 1.0
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
