--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -1,6 +1,6 @@
 name:                rawtherapee-convert
 version:             0.1.0.0
-synopsis:            Small program which uses rawtherapee to convert raw files to jpgs 
+synopsis:            Small program which uses rawtherapee to convert raw files to jpgs
 description:         Please see README.md
 homepage:            https://github.com/2chilled/rawtherapee-convert#readme
 license:             GPL-3
@@ -26,16 +26,17 @@ library
   hs-source-dirs:      lib
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                     , conduit >= 1.0 && < 2.0 
-                     , mtl >= 2.0 && < 3.0 
-                     , resourcet >= 1.0 && < 2.0 
-                     , conduit-combinators >= 1.0 && < 2.0 
-                     , transformers >= 0.4 && < 1.0 
-                     , directory >= 1.2 && < 2.0 
-                     , filepath >= 1.3 && < 2.0 
+                     , conduit >= 1.0 && < 2.0
+                     , mtl >= 2.0 && < 3.0
+                     , resourcet >= 1.0 && < 2.0
+                     , conduit-combinators >= 1.0 && < 2.0
+                     , transformers >= 0.4 && < 1.0
+                     , directory >= 1.2 && < 2.0
+                     , filepath >= 1.3 && < 2.0
                      , text >= 1.0 && < 2.0
                      , monad-control >= 1.0 && < 2.0
                      , transformers-base >= 0.3 && < 1.0
+                     , MissingH >= 1.0 && < 2.0
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
@@ -50,6 +51,7 @@ test-suite rawtherapee-convert-tests
                      , test-framework-hunit >= 0.3.0.2
                      , HUnit >= 1.2.5.2
                      , rawtherapee-convert
+                     , filepath >= 1.3 && < 2.0
   default-language:    Haskell2010
   ghc-options:         -Wall
 
