--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -37,6 +37,7 @@ library
                      , monad-control >= 1.0 && < 2.0
                      , transformers-base >= 0.3 && < 1.0
                      , MissingH >= 1.0 && < 2.0
+                     , hslogger >= 1.0 && < 2.0
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
