--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -27,9 +27,9 @@ library
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , conduit >= 1.0 && < 2.0
-                     , mtl >= 2.0 && < 3.0
-                     , resourcet >= 1.0 && < 2.0
                      , conduit-combinators >= 1.0 && < 2.0
+                     , resourcet >= 1.0 && < 2.0
+                     , mtl >= 2.0 && < 3.0
                      , transformers >= 0.4 && < 1.0
                      , directory >= 1.2 && < 2.0
                      , filepath >= 1.3 && < 2.0
@@ -53,6 +53,11 @@ test-suite rawtherapee-convert-tests
                      , HUnit >= 1.2.5.2
                      , rawtherapee-convert
                      , filepath >= 1.3 && < 2.0
+                     , directory >= 1.2 && < 2.0
+                     , random >= 1.0 && < 2.0
+                     , conduit >= 1.0 && < 2.0
+                     , conduit-combinators >= 1.0 && < 2.0
+                     , resourcet >= 1.0 && < 2.0
   default-language:    Haskell2010
   ghc-options:         -Wall
 
