--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -18,6 +18,7 @@ executable rawtherapee-convert
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , rawtherapee-convert
+                     , hslogger >= 1.0 && < 2.0
   ghc-options:         -Wall
 
 
