--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -39,6 +39,7 @@ library
                      , transformers-base >= 0.3 && < 1.0
                      , MissingH >= 1.0 && < 2.0
                      , hslogger >= 1.0 && < 2.0
+                     , process >= 1.0 && < 2.0
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
