--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -44,6 +44,8 @@ library
                      , MissingH >= 1.0 && < 2.0
                      , hslogger >= 1.0 && < 2.0
                      , process >= 1.0 && < 2.0
+                     , either >= 4.0 && < 5.0
+                     , bytestring >= 0.10 && < 1.0
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
