--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -23,6 +23,9 @@ executable rawtherapee-convert
                      , conduit-combinators >= 1.0 && < 2.0
                      , resourcet >= 1.0 && < 2.0
                      , transformers >= 0.4 && < 1.0
+                     , either >= 4.0 && < 5.0
+                     , MissingH >= 1.0 && < 2.0
+                     , directory >= 1.2 && < 2.0
   ghc-options:         -Wall
 
 
