--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -69,6 +69,7 @@ test-suite rawtherapee-convert-tests
                      , conduit >= 1.0 && < 2.0
                      , conduit-combinators >= 1.0 && < 2.0
                      , resourcet >= 1.0 && < 2.0
+                     , text >= 1.0 && < 2.0
   default-language:    Haskell2010
   ghc-options:         -Wall
 
