--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -26,6 +26,7 @@ executable rawtherapee-convert
                      , either >= 4.0 && < 5.0
                      , MissingH >= 1.0 && < 2.0
                      , directory >= 1.2 && < 2.0
+                     , filepath >= 1.3 && < 2.0
   ghc-options:         -Wall
 
 
