--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration.html
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-7.1
+resolver: lts-7.8
 
 # Local packages, usually specified by relative directory name
 packages:
@@ -19,6 +19,7 @@ extra-package-dbs: []
 nix:
   enable: true
   shell-file: shell.nix
+  pure: false
 
 # Control whether we use the GHC we find on the path
 # system-ghc: true
