--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -50,6 +50,7 @@ library
                      , process >= 1.0 && < 2.0
                      , either >= 4.0 && < 5.0
                      , bytestring >= 0.10 && < 1.0
+                     , temporary >= 1.2 && < 1.3
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
