--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -52,6 +52,7 @@ library
                      , bytestring >= 0.10 && < 1.0
                      , temporary >= 1.2 && < 1.4
                      , ini >= 0.4
+                     , unordered-containers
   ghc-options:         -Wall
 
 test-suite rawtherapee-convert-tests
@@ -70,6 +71,7 @@ test-suite rawtherapee-convert-tests
                      , conduit-combinators >= 1.0 && < 2.0
                      , resourcet >= 1.0 && < 2.0
                      , text >= 1.0 && < 2.0
+                     , ini >= 0.4
   default-language:    Haskell2010
   ghc-options:         -Wall
 
