--- a/rawtherapee-convert.cabal
+++ b/rawtherapee-convert.cabal
@@ -27,7 +27,7 @@ executable rawtherapee-convert
                      , MissingH >= 1.0 && < 2.0
                      , directory >= 1.2 && < 2.0
                      , filepath >= 1.3 && < 2.0
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
 
 
 library
@@ -53,7 +53,7 @@ library
                      , temporary >= 1.2 && < 1.4
                      , ini >= 0.4
                      , unordered-containers
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
 
 test-suite rawtherapee-convert-tests
   type:                exitcode-stdio-1.0
